# sdsc_flour_quality

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: lint.yaml
configs/: lr_flour_z_2_impute_mixmax.yaml  lr_flour_z_2_impute_mixmax_oversample.yaml  lr_flour_z_2_impute_none.yaml  lr_flour_z_2_impute_none_cv.yaml  lr_flour_z_2_impute_none_oversample.yaml  lr_flour_z_2_impute_standard.yaml  lr_flour_z_2_impute_standard_cv.yaml  lr_flour_z_2_impute_standard_oversample.yaml  lr_flour_z_2_standard_cv.yaml  lr_flour_z_2_standard_oversample_cv.yaml  lr_flour_z_3_impute_none.yaml  lr_flour_z_3_impute_none_oversample.yaml  lr_flour_z_3_impute_standard.yaml  lr_flour_z_3_impute_standard_cv.yaml  lr_flour_z_3_impute_standard_oversample.yaml  lr_flour_z_3_impute_standard_oversample_cv.yaml  lr_flour_z_3_standard_cv.yaml  rf_flour_z_2_impute_mixmax_cv.yaml  rf_flour_z_2_impute_none_cv.yaml  rf_flour_z_2_impute_standard_cv.yaml  rf_flour_z_2_none_cv.yaml  rf_flour_z_3_impute_none_cv.yaml  rf_flour_z_3_none_cv.yaml  svc_flour_z_2_impute_standard.yaml  svc_flour_z_2_impute_standard_cv.yaml  svc_flour_z_2_impute_standard_oversample_cv.yaml  svc_flour_z_2_standard_cv.yaml  svc_flour_z_3_impute_standard_cv.yaml  svc_flour_z_3_impute_standard_oversample_cv.yaml  svc_flour_z_3_standard_cv.yaml  svr_flour_z_2_impute_standard_cv.yaml  svr_flour_z_2_impute_standard_oversample_cv.yaml  svr_flour_z_3_impute_standard_cv.yaml  svr_flour_z_3_impute_standard_oversample.yaml  svr_flour_z_3_impute_standard_oversample_cv.yaml  svr_flour_z_3_standard_cv.yaml
data/: flour_dataset.csv  test.csv  test_Happy_Blackberry_Windmill.csv  test_no_labels.csv  train.csv
data/hyperparameters/: flour_z_2_RandomForestFlour_mixmax.json  flour_z_2_RandomForestFlour_none.json  flour_z_2_impute_RandomForestFlour_mixmax.json  flour_z_2_impute_RandomForestFlour_none.json  flour_z_2_impute_RandomForestFlour_standard.json  flour_z_2_impute_SVCFlour_standard.json  flour_z_3_impute_SVCFlour_standard.json  flour_z_3_impute_SVRFlour_standard.json
data/preprocessed/: flour_z_2.csv  flour_z_2_impute.csv  flour_z_3.csv  flour_z_3_impute.csv
notebooks/: cost_analysis.ipynb  data_analysis.ipynb  feature_analysis.ipynb
scripts/: app.py  create_train_test_file.py  evaluate.py  hyperparameters_search.py  preprocess.py  train.py
src/flour/: __about__.py  __init__.py  data.py
src/flour/models/: __init__.py  feature.py  linear_regression.py  rf.py  svc.py  svr.py
